css/trip.css
* {
    font-family: 'Muli', sans-serif;
}

body {
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;    
    background-color: #252525;
}

body.trip {
    background-image: url("../images/trip-bg.jpg");
}

body.container {
    position: relative;
}

.vertical-middle {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 60%;
    height: 80%;
    margin: auto;
    padding: 2%;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
}

.flight-details, .arrival-details, .party-details, .location-details {
    float: left;
    width: 300px;
    padding: 5px;
    margin: 10px;
    background-color: rgba(255,255,255,0.9);
}

.footer {
    float: left;
    margin: 10px;
}

/* For add-trip-2 */
.add-flight {
    background-color: rgba(255,255,255,0.9);
    margin: 5px;
}

.next-bt {
    margin: 5px;
}

.choose-rides-for-d-a {
    background-color: rgba(255,255,255,0.9);
    margin: 5px; 
    padding: 5px;
}

.f-n, .a-d {
    float: left;
    padding: 5px;
    margin: 5px;
}

.text-over-dark-bg {
    color: white;
    text-shadow: 1px 1px 5px #252525;
}

.container h1:not(.text-over-dark-bg), .container h2:not(.text-over-dark-bg) {
    color: #252525;
}

.container h1 {
    font-size: 400%;
    font-weight: 700; /* This corresponds to "Bold" */
    text-align: left;
    line-height: 1.45;
}

.container h2 {
    font-size: 200%;
    font-weight: 600; /* This corresponds to "Semi Bold" */
    text-align: left;
    line-height: 1;
}

.button {
    background-color: #1F7DC1;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 3px;
    cursor: pointer;
}

.button:hover {
    background-color: #94C6CF;
}

.button:disabled {
  opacity: 0.65; 
  cursor: not-allowed;
}

input, select {
    height: 40px;
    display: block;
    font-size: 1em;
    border: 1px solid black;
    border-radius: 5px;
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: left;
    padding-left: 10px;
}

/*** Customized Checkbox *** 
 * Source: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp
 */
/* Customize the label (the container) */
.checkbox-container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
  
  /* Hide the browser's default checkbox */
  .checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
  }
  
  /* Create a custom checkbox */
  .checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 25px;
    width: 25px;
    background-color: rgba(148,198,207, 0.5);
  }
  
  /* On mouse-over, add a grey background color */
  .checkbox-container:hover input ~ .checkmark {
    background-color: rgba(148,198,207, 1);
  }
  
  /* When the checkbox is checked, add a blue background */
  .checkbox-container input:checked ~ .checkmark {
    background-color: #1F7DC1;
  }
  
  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
  }
  
  /* Show the checkmark when checked */
  .checkbox-container input:checked ~ .checkmark:after {
    display: block;
  }
  
  /* Style the checkmark/indicator */
  .checkbox-container .checkmark:after {
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
  }

/*** Navigation Bar ***/
ul.navbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: rgba(37, 37, 37, 0.6);
}

* {
    font-family: 'Muli', sans-serif;
}

body {
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;    
    background-color: #252525;
}

/* Keep all options float to the right */
ul.navbar li {
    float: right;
}
/* Exception for "Dashboard" option, which floats to left */
ul.navbar li.left {
    float: left;
}

ul.navbar li a, ul.navbar li.dropdown a.dropbtn {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

ul.navbar li a:hover:not(.active) {background-color: #94C6CF;}

ul.navbar li a.back-to-dashboard {
    color: #94C6CF;
    font-weight: 700;
}

ul.navbar li a.back-to-dashboard:hover {
    color: #252525;
}

ul.navbar li a.active {
    background-color: white;
    color: #252525
}

ul.navbar .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

ul.navbar .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

ul.navbar .dropdown-content a:hover {background-color: #f1f1f1}

ul.navbar .dropdown:hover .dropdown-content {
    display: block;
}

/****************** Responsive yeah! *********************/
@media screen and (max-width: 600px){
    ul.navbar li.left, 
    ul.navbar li.dropdown,
    ul.navbar li {float: none;}

    .container h1 {
        font-size: 200%;
    }

    .container h2 {
        font-size: 100%;
    }
}

